src/tests/ci/assignment_5_functions/invalid_syntax/04_function_keyword_name.c
int return(int x) {  // 'return' is a keyword
    return x + 1;
}

int main() {
    return 0;
}